# cpp_2021

./: .codecov.yml  .gitignore  .travis.yml  .travis.yml.swp  CPPLINT.cfg  README.md
project/: CMakeLists.txt  CMakeLists.txt.in  Makefile  db.txt  find.txt  main  project.cbp
project/include/: cars.h  cars_logic.h  search.h
project/src/: cars.c  linear.c  main.c  parallel.c
project/tests/: 1.txt  2.txt  3.txt  4.txt  5.txt  CMakeLists.txt  cars.cpp  linear.cpp  main.cpp  parallel.cpp  tests.cpp
